--- a/index.html
+++ b/index.html
@@ -187,4 +187,111 @@
                 <path fill="currentColor" d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/>
             </svg>
         </button>
-       
+       <button id="reset" aria-label="Reset">
+            <svg viewBox="0 0 24 24">
+                <path fill="currentColor" d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H5a7 7 0 1 1 7 7 7 7 0 0 1-1-.07v2.02A9 9 0 1 0 13 3Z"/>
+            </svg>
+        </button>
+    </div>
+
+    <div class="settings-popup" id="settings">
+        <div class="settings-content">
+            <h3>Settings</h3>
+            <label for="time-input">Set Timer (mm:ss)</label>
+            <input type="text" id="time-input" placeholder="01:00"/>
+            <label for="bg-color-input">Background Color</label>
+            <input type="color" id="bg-color-input" value="#000000"/>
+            <label for="font-color-input">Font Color</label>
+            <input type="color" id="font-color-input" value="#FFFFFF"/>
+            <button id="close-settings">Close</button>
+        </div>
+    </div>
+
+    <button id="install-button">Install App</button>
+
+    <script>
+        let countdown;
+        let timeRemaining = 60; // default 1 minute in seconds
+
+        const timerDisplay = document.getElementById('timer');
+        const settingsButton = document.getElementById('settings-button');
+        const settingsPopup = document.getElementById('settings');
+        const closeSettingsButton = document.getElementById('close-settings');
+        const startButton = document.getElementById('start');
+        const pauseButton = document.getElementById('pause');
+        const resetButton = document.getElementById('reset');
+        const timeInput = document.getElementById('time-input');
+        const bgColorInput = document.getElementById('bg-color-input');
+        const fontColorInput = document.getElementById('font-color-input');
+
+        // Display time in mm:ss format
+        function displayTime(seconds) {
+            const minutes = Math.floor(seconds / 60);
+            const remainderSeconds = seconds % 60;
+            const display = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
+            timerDisplay.textContent = display;
+        }
+
+        // Timer logic
+        function startTimer() {
+            clearInterval(countdown);
+            const now = Date.now();
+            const then = now + timeRemaining * 1000;
+            displayTime(timeRemaining);
+            countdown = setInterval(() => {
+                timeRemaining = Math.round((then - Date.now()) / 1000);
+                if (timeRemaining < 0) {
+                    clearInterval(countdown);
+                    return;
+                }
+                displayTime(timeRemaining);
+            }, 1000);
+        }
+
+        function pauseTimer() {
+            clearInterval(countdown);
+        }
+
+        function resetTimer() {
+            clearInterval(countdown);
+            timeRemaining = 60;
+            displayTime(timeRemaining);
+        }
+
+        // Event listeners
+        settingsButton.addEventListener('click', () => {
+            settingsPopup.style.display = 'flex';
+        });
+
+        closeSettingsButton.addEventListener('click', () => {
+            settingsPopup.style.display = 'none';
+        });
+
+        startButton.addEventListener('click', startTimer);
+        pauseButton.addEventListener('click', pauseTimer);
+        resetButton.addEventListener('click', resetTimer);
+
+        // Update settings
+        timeInput.addEventListener('change', () => {
+            const timeParts = timeInput.value.split(':');
+            if (timeParts.length === 2) {
+                const minutes = parseInt(timeParts[0], 10);
+                const seconds = parseInt(timeParts[1], 10);
+                timeRemaining = minutes * 60 + seconds;
+                displayTime(timeRemaining);
+            }
+        });
+
+        bgColorInput.addEventListener('input', () => {
+            document.documentElement.style.setProperty('--bg-color', bgColorInput.value);
+        });
+
+        fontColorInput.addEventListener('input', () => {
+            document.documentElement.style.setProperty('--timer-color', fontColorInput.value);
+        });
+
+        // Initial display
+        displayTime(timeRemaining);
+    </script>
+</body>
+</html>
