--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             height: auto;
         }
         .controls {
-            position: fixed;
-            bottom: 20px;
+            position: absolute;
+            bottom: 10%;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
