--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- Adapt to mobile devices -->
+    <!-- 适配移动设备 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <!-- Force full-screen display when launched from home screen -->
+    <!-- 强制全屏显示 -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- Set status bar color -->
+    <!-- 设置状态栏颜色 -->
     <meta name="theme-color" content="#000000">
-    <!-- Link to the manifest file -->
+    <!-- 链接到 manifest 文件 -->
     <link rel="manifest" href="manifest.json">
-    <!-- Icons for iOS -->
+    <!-- iOS 图标 -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-    <title>Countdown Timer</title>
+    <title>倒计时</title>
     <style>
         :root {
             --bg-color: #000000;
@@ -41,12 +41,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            width: 100vw;
             position: relative;
         }
         #timer {
-            font-size: calc(50vmin);
+            font-size: calc(20vw);
             margin: 0;
             color: var(--timer-color);
             display: flex;
@@ -54,10 +52,6 @@
             align-items: center;
             line-height: 1;
             user-select: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
         }
         .controls {
             position: absolute;
@@ -145,7 +139,7 @@
             width: 100%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        /* Install button styles */
+        /* 安装按钮样式 */
         #install-button {
             position: fixed;
             bottom: 80px;
@@ -158,7 +152,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            display: none; /* Hidden by default */
+            display: none; /* 默认隐藏 */
         }
     </style>
 </head>
@@ -167,7 +161,7 @@
     <div class="controls">
         <button id="settings-button" aria-label="Settings">
             <svg viewBox="0 0 24 24">
-                <!-- Gear icon -->
+                <!-- 齿轮图标 -->
                 <path fill="currentColor" d="M12 15.5C13.93 15.5 15.5 13.93 15.5 12S13.93 8.5 12 8.5 8.5 10.07 8.5 12 10.07 15.5 12 15.5M19.43 12.97C19.46 12.65 19.5 12.33 19.5 12S19.46 11.35 19.43 11.03L21.5 9.9 19.95 7.05 17.75 7.5C17.32 6.85 16.77 6.27 16.13 5.75L16.5 3.5 13.5 2 12 4.5C11.67 4.5 11.33 4.5 11 4.5S10.33 4.5 10 4.5L8.5 2 5.5 3.5 5.87 5.75C5.23 6.27 4.68 6.85 4.25 7.5L2.05 7.05 0.5 9.9 2.57 11.03C2.54 11.35 2.5 11.67 2.5 12S2.54 12.65 2.57 12.97L0.5 14.1 2.05 16.95 4.25 16.5C4.68 17.15 5.23 17.73 5.87 18.25L5.5 20.5 8.5 22 10 19.5C10.33 19.5 10.67 19.5 11 19.5S11.67 19.5 12 19.5L13.5 22 16.5 20.5 16.13 18.25C16.77 17.73 17.32 17.15 17.75 16.5L19.95 16.95 21.5 14.1 19.43 12.97Z" />
             </svg>
         </button>
@@ -190,23 +184,23 @@
 
     <div class="settings-popup" id="settings">
         <div class="settings-content">
-            <h3>Settings</h3>
-            <label for="time-input">Set Timer (minutes)</label>
+            <h3>设置</h3>
+            <label for="time-input">设置计时器（分钟）</label>
             <input type="number" id="time-input" placeholder="1" step="any"/>
-            <label for="bg-color-input">Background Color</label>
+            <label for="bg-color-input">背景颜色</label>
             <input type="color" id="bg-color-input" value="#000000"/>
-            <label for="font-color-input">Font Color</label>
+            <label for="font-color-input">字体颜色</label>
             <input type="color" id="font-color-input" value="#FFFFFF"/>
-            <button id="close-settings">Close</button>
+            <button id="close-settings">关闭</button>
         </div>
     </div>
 
-    <button id="install-button">Install App</button>
+    <button id="install-button">安装应用</button>
 
     <script>
         let countdown;
-        let timeRemaining = 60; // default 1 minute in seconds
-        let initialTime = 60;   // store the initial time set by the user
+        let timeRemaining = 60; // 默认 1 分钟（秒）
+        let initialTime = 60;   // 存储用户设置的初始时间
 
         const timerDisplay = document.getElementById('timer');
         const settingsButton = document.getElementById('settings-button');
@@ -219,7 +213,7 @@
         const bgColorInput = document.getElementById('bg-color-input');
         const fontColorInput = document.getElementById('font-color-input');
 
-        // Display time in mm:ss format
+        // 以 mm:ss 格式显示时间
         function displayTime(seconds) {
             const minutes = Math.floor(seconds / 60);
             const remainderSeconds = seconds % 60;
@@ -227,7 +221,7 @@
             timerDisplay.textContent = display;
         }
 
-        // Timer logic
+        // 计时器逻辑
         function startTimer() {
             clearInterval(countdown);
             const now = Date.now();
@@ -253,7 +247,7 @@
             displayTime(timeRemaining);
         }
 
-        // Event listeners
+        // 事件监听
         settingsButton.addEventListener('click', () => {
             settingsPopup.style.display = 'flex';
         });
@@ -262,16 +256,20 @@
             settingsPopup.style.display = 'none';
         });
 
-        startButton.addEventListener('click', startTimer);
+        startButton.addEventListener('click', () => {
+            requestFullScreen(); // 在用户交互中请求全屏
+            startTimer();
+        });
+
         pauseButton.addEventListener('click', pauseTimer);
         resetButton.addEventListener('click', resetTimer);
 
-        // Update settings
+        // 更新设置
         timeInput.addEventListener('change', () => {
             const minutes = parseFloat(timeInput.value);
             if (!isNaN(minutes) && minutes >= 0) {
                 timeRemaining = Math.round(minutes * 60);
-                initialTime = timeRemaining; // Store the initial time
+                initialTime = timeRemaining; // 存储初始时间
                 displayTime(timeRemaining);
             }
         });
@@ -284,7 +282,7 @@
             document.documentElement.style.setProperty('--timer-color', fontColorInput.value);
         });
 
-        // Fullscreen handling for iPhone Safari
+        // 全屏处理
         function requestFullScreen() {
             const docElm = document.documentElement;
             if (docElm.requestFullscreen) {
@@ -298,16 +296,9 @@
             }
         }
 
-        // Request fullscreen when the device rotates to landscape
-        window.addEventListener('orientationchange', () => {
-            if (window.orientation === 90 || window.orientation === -90) {
-                requestFullScreen();
-            }
-        });
-
-        // Initial display
+        // 初始显示
         displayTime(timeRemaining);
-        timeInput.value = '1'; // Set default input value to 1 minute
+        timeInput.value = '1'; // 设置默认输入值为 1 分钟
     </script>
 </body>
 </html>
